--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,13 +4,30 @@
 
 <h1>Movies</h1>
 
-<div id="movies">
-  <% @movies.each do |movie| %>
-    <%= render movie %>
-    <p>
-      <%= link_to "Show this movie", movie %>
-    </p>
-  <% end %>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Rating</th>
+      <th>Release Date</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @movies.each do |movie| %>
+      <tr id="<%= dom_id movie %>">
+        <td><%= link_to movie.title, movie_path(movie) %></td>
+        <td><%= movie.rating %></td>
+        <td><%= movie.release_date.strftime("%B %d, %Y") %></td>
+      </tr>
+    <% end %>
+  </tbody>
+
+  <tfoot>
+    <tr>
+      <td colspan="4">Total Movies: <%= @movies.count %></td>
+    </tr>
+  </tfoot>
+</table>
 
 <%= link_to "New movie", new_movie_path %>
