--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,10 +1,12 @@
+<div class="container">
 <p style="color: green"><%= notice %></p>
 
 <%= render @movie %>
 
 <div>
-  <%= link_to "Edit this movie", edit_movie_path(@movie, sort: params[:sort], direction: params[:direction]) %> |
-  <%= link_to "Back to movies", movies_path(sort: params[:sort], direction: params[:direction]) %>
+  <%= link_to "Edit this movie", edit_movie_path(@movie, sort: params[:sort], direction: params[:direction]), class: "button" %> |
+  <%= link_to "Back to movies", movies_path(sort: params[:sort], direction: params[:direction]) , class: "button"%>
 
-  <%= button_to "Destroy this movie", @movie, method: :delete, params: { sort: params[:sort], direction: params[:direction] } %>
+  <%= button_to "Destroy this movie", @movie, method: :delete, params: { sort: params[:sort], direction: params[:direction] }, class: "button" %>
+</div>
 </div>
