--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<h1><%= content_for?(:title) ? yield(:title) : "New Movie" %></h1>
 <%= form_with(model: movie , url: movie.persisted? ? movie_path(movie, sort: params[:sort], direction: params[:direction]) : movies_path(sort: params[:sort], direction: params[:direction])) do |form| %>
   <% if movie.errors.any? %>
     <div style="color: red">
@@ -35,3 +37,4 @@
     <%= form.submit %>
   </div>
 <% end %>
+</div>
