--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,12 +1,12 @@
+<div class="container">
 <% content_for :title, "Editing movie" %>
-
-<h1>Editing movie</h1>
 
 <%= render "form", movie: @movie %>
 
 <br>
 
 <div>
-  <%= link_to "Show this movie", movie_path(@movie, sort: params[:sort], direction: params[:direction])%> |
-  <%= link_to "Back to movies", movies_path(sort: params[:sort], direction: params[:direction]) %>
+  <%= link_to "Show this movie", movie_path(@movie, sort: params[:sort], direction: params[:direction]), class: "button"%> |
+  <%= link_to "Back to movies", movies_path(sort: params[:sort], direction: params[:direction]), class: "button" %>
+</div>
 </div>
