--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p style="color: green"><%= notice %></p>
 
 <% content_for :title, "Movies" %>
@@ -30,4 +31,5 @@
   </tfoot>
 </table>
 
-<%= link_to "New movie", new_movie_path(sort: params[:sort], direction: params[:direction]) %>
+<%= link_to "New movie", new_movie_path(sort: params[:sort], direction: params[:direction]), class: "button" %>
+</div>
