--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <p style="color: green"><%= notice %></p>
 
-<h1>Movie Detail</h1>
+<h1>Movie Details</h1>
 <%= render @movie %>
 
 <div>
